@@ -7,6 +7,7 @@ import de.itlobby.discoverj.settings.AppConfig;
 import de.itlobby.discoverj.settings.Settings;
 import de.itlobby.discoverj.util.AudioUtil;
 import de.itlobby.discoverj.util.ImageUtil;
+import de.itlobby.discoverj.util.SystemUtil;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -15,7 +16,7 @@ import org.jaudiotagger.audio.AudioFile;
 import org.json.JSONObject;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLEncoder;
 import java.text.MessageFormat;
 import java.util.Collections;
@@ -80,7 +81,7 @@ public class DiscogsCoverSearchEngine implements CoverSearchEngine {
 
     private List<ImageFile> getCoverByReleaseId(Integer releaseId) {
         try {
-            URL url = new URL("https://api.discogs.com/releases/%d?key=%s".formatted(releaseId, DISCOGS_API_KEY));
+            URI url = URI.create("https://api.discogs.com/releases/%d?key=%s".formatted(releaseId, DISCOGS_API_KEY));
             String jsonResultString = IOUtils.toString(url, UTF_8);
             return new JSONObject(jsonResultString)
                     .getJSONArray("images").toList().stream()
@@ -93,6 +94,9 @@ public class DiscogsCoverSearchEngine implements CoverSearchEngine {
                     .toList();
         } catch (IOException e) {
             log.error(e.getMessage(), e);
+        } finally {
+            // Wait a bit to avoid exceeding the api request limit
+            SystemUtil.threadSleep(250);
         }
 
         return Collections.emptyList();
